<resources>
    <string name="app_name">Bowling Companion</string>
    <string name="title_activity_settings">Settings</string>
    <string name="open_source_libraries">Open Source Libraries</string>
    <string name="changelog">Changelog</string>
    <string name="okay">Okay</string>
    <string name="undo">Undo</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="query_delete_item">Delete %s?</string>
    <string name="dialog_delete_item_message">You can\'t recover this data once it\'s gone!</string>
    <string name="sort_items">Sort items</string>
    <string name="bowl">Bowl</string>
    <string name="begin">Begin</string>
    <string name="rate_prompt">If you like this app, please consider rating\u00A0it.</string>
    <string name="rate_app">Rate</string>
    <string name="rate_remind_me">Remind me later</string>
    <string name="rate_no">Don\'t ask again</string>
    <string name="error_unknown_title">An unknown error occurred!</string>
    <string name="error_unknown_message">Please try again later.</string>
    <string name="tab_record">Record</string>
    <string name="tab_statistics">Statistics</string>
    <string name="tab_equipment">Equipment</string>
    <string name="bowlers">Bowlers</string>
    <string name="teams">Teams</string>
    <string name="leagues">Leagues</string>
    <string name="events">Events</string>
    <string name="yesterday">Yesterday</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="action_send_feedback">Send feedback</string>
    <string name="action_settings">Settings</string>
    <string name="action_transfer">Transfer data</string>
    <string name="action_save">Save</string>
    <string name="action_sort_by">Sort by</string>
    <string name="action_condensed_series">Condensed view</string>
    <string name="action_expanded_series">Expanded view</string>
    <string name="action_share">Share</string>
    <string name="action_stop_sharing">Stop sharing</string>
    <string name="action_overview">Overview</string>
    <string name="transfer_data">Transfer data</string>
    <string name="restore_or_delete">Restore or Delete</string>
    <string name="transfer_instructions_p1">This tool allows you to transfer your bowling data to a new device. Your data will be uploaded anonymously, and you can later download it onto a new device. Your data will be available to download for 1 hour to give you ample time to transfer to a new device.</string>
    <string name="transfer_instructions_p2">After you have imported the data on your new device, be sure to delete the backup.</string>
    <string name="transfer_step_1">1.\u00A0Export</string>
    <string name="transfer_step_2">2.\u00A0Import</string>
    <string name="transfer_step_3">3.\u00A0Restore or\u00A0delete</string>
    <string name="connecting_to_server">Connecting to server…</string>
    <string name="loading">Loading…</string>
    <string name="export">Export</string>
    <string name="transfer_export_instructions">Press \'Begin\' to upload your bowling data. When the upload finishes, you will receive a unique code that will allow you to download the data on a different device.</string>
    <string name="export_next_step">On your other device, open this menu and select option "2.\u00A0Import"</string>
    <string name="export_upload_complete">Upload complete! Your code:\n%s</string>
    <string name="export_upload_failed">Upload failed! Please try again.</string>
    <string name="uploading">Uploading…</string>
    <string name="data_import">Import</string>
    <string name="transfer_import_instructions">Enter your code below and press \'Begin\' to download your bowling data. When the download has finished, you will be prompted to load the new data, which will overwrite any other data on this device.</string>
    <string name="import_next_step">After you have confirmed that the data was successfully imported, you should return to this screen and proceed with option "3.\u00A0Restore\u00A0or\u00A0delete"</string>
    <string name="hint_code">Code</string>
    <string name="import_download_failed">Download failed! Please try again.</string>
    <string name="downloading">Downloading…</string>
    <string name="overwrite_data_title">Overwrite data?</string>
    <string name="overwrite_data_message">You have downloaded a set of bowler data from another device. You can overwrite your current data, confirm it\'s correct, then return to this menu to either delete the backup or reload your old data. Are you sure you want to continue?</string>
    <string name="overwrite">Overwrite</string>
    <string name="transfer_restore_delete_instructions">Below, you can either restore your data from the last backup, or delete your backup to ensure it won\'t take up any space on your device.</string>
    <string name="restore">Restore</string>
    <string name="restore_backup_title">Restore backup?</string>
    <string name="restore_backup_message">Restoring your backup will overwrite the data you have downloaded, and you will need to download it again if you want to use it. Are you sure you want to restore your backup?</string>
    <string name="delete_backup_title">Delete backup?</string>
    <string name="delete_backup_message">Deleting your backup will permanently erase your old data and you will not be able to recover it. Are you sure you want to continue?</string>
    <string name="no_backup_exists">There is no backup file to restore or delete. Have you imported your data yet? Did you already delete your backup?</string>
    <string name="hint_team_name">Name</string>
    <string name="delete_team">Delete team</string>
    <string name="select_team_members">Select members</string>
    <string name="error_no_bowlers">You must have at least 1 bowler before you can create a team</string>
    <string name="match_play_header">Match play</string>
    <string name="match_play_result">Result</string>
    <string name="hint_opponent_name">Opponent\'s name</string>
    <string name="hint_opponent_score">Opponent\'s score</string>
    <string name="match_play_none">None</string>
    <string name="match_play_won">Won</string>
    <string name="match_play_lost">Lost</string>
    <string name="match_play_tied">Tied</string>
    <string name="pref_category_general">General</string>
    <string name="pref_highlight_score_enabled_title">Highlight high games</string>
    <string name="pref_highlight_score_enabled_summary_on">High games will be highlighted</string>
    <string name="pref_highlight_score_enabled_summary_off">No games highlighted</string>
    <string name="pref_highlight_series_enabled_title">Highlight high series</string>
    <string name="pref_highlight_series_enabled_summary_on">High series will be highlighted</string>
    <string name="pref_highlight_series_enabled_summary_off">No series highlighted</string>
    <string name="pref_average_as_decimal_title">Show average as decimal?</string>
    <string name="pref_average_as_decimal_summary_on">Up to 1 decimal</string>
    <string name="pref_average_as_decimal_summary_off">No decimals</string>
    <string name="pref_category_scoring">Scoring</string>
    <string name="pref_enable_auto_advance_title">Enable auto advance?</string>
    <string name="pref_enable_auto_advance_summary_on">Frame will auto advance after inactivity</string>
    <string name="pref_enable_auto_advance_summary_off">Auto advance disabled</string>
    <string name="pref_auto_advance_time_title">Auto advance interval</string>
    <string name="pref_auto_advance_time_summary">Time of inactivity before advance</string>
    <string name="pref_auto_advance_time_dialog">Set auto advance interval</string>
    <string name="pref_enable_fab_title">Enable floating next button?</string>
    <string name="pref_enable_fab_summary_on">Next button available</string>
    <string name="pref_enable_fab_summary_off">Floating next button disabled</string>
    <string name="pref_pins_behind_fab_title">Extend pins behind floating button?</string>
    <string name="pref_pins_behind_fab_summary_on">Pins extend to bottom of screen</string>
    <string name="pref_pins_behind_fab_summary_off">Pins will not appear behind buttons</string>
    <string name="pref_enable_strike_highlights_title">Highlight marks?</string>
    <string name="pref_enable_strike_highlights_summary_on">Strikes and spares will be highlighted</string>
    <string name="pref_enable_strike_highlights_summary_off">Mark highlighting disabled</string>
    <string name="pref_enable_auto_lock_title">Auto lock games?</string>
    <string name="pref_enable_auto_lock_summary_on">Games will lock after final frame</string>
    <string name="pref_enable_auto_lock_summary_off">Games must be locked manually</string>
    <string name="pref_category_stats">Statistics</string>
    <string name="pref_include_events_title">Include events?</string>
    <string name="pref_include_events_summary_on">Bowler stats include events</string>
    <string name="pref_include_events_summary_off">Events not included in stats</string>
    <string name="pref_include_open_title">Include practice?</string>
    <string name="pref_include_open_summary_on">Bowler stats include practice games</string>
    <string name="pref_include_open_summary_off">Practice not included in stats</string>
    <string name="pref_count_h2_as_h_title">Count H2 as HP?</string>
    <string name="pref_count_h2_as_h_summary_on">H2 will add to headpin count</string>
    <string name="pref_count_h2_as_h_summary_off">Headpins won\'t include H2</string>
    <string name="pref_count_s2_as_s_title">Count S2 as SP?</string>
    <string name="pref_count_s2_as_s_summary_on">S2 will add to split count</string>
    <string name="pref_count_s2_as_s_summary_off">Splits won\'t include S2</string>
    <string name="pref_category_match_play">Match play</string>
    <string name="pref_show_match_results_title">Show match play results?</string>
    <string name="pref_show_match_results_summary_on">Series show match play results</string>
    <string name="pref_show_match_results_summary_off">Match play results hidden</string>
    <string name="pref_highlight_match_results_title">Highlight match play results?</string>
    <string name="pref_highlight_match_results_summary_on">Wins and losses highlighted</string>
    <string name="pref_highlight_match_results_summary_off">Match play highlights disabled</string>
    <string name="pref_category_feedback">Feedback</string>
    <string name="pref_rate_title">Rate the app</string>
    <string name="pref_rate_summary">Your feedback is appreciated</string>
    <string name="pref_report_bug_title">Report a bug</string>
    <string name="pref_report_bug_summary">Help the app work better for you</string>
    <string name="pref_send_feedback_title">Send feedback</string>
    <string name="pref_send_feedback_summary">Provide comments and suggestions</string>
    <string name="pref_category_other">Other</string>
    <string name="pref_facebook_title">Visit us on Facebook</string>
    <string name="pref_facebook_summary">For news and updates</string>
    <string name="pref_developer_website_title">Visit the developer website</string>
    <string name="pref_developer_website_summary">To learn more about the developer</string>
    <string name="pref_view_source_title">View source on GitHub</string>
    <string name="pref_view_source_summary">Check out the open source repository</string>
    <string name="pref_attributions_title">Open Source Libraries</string>
    <string name="pref_attributions_summary">Libraries we depend on</string>
    <string name="pref_view_privacy_policy_title">Privacy policy</string>
    <string name="pref_view_privacy_policy_summary">View our policy on anonymous data collection</string>
    <string name="pref_version_title">App version</string>
    <string name="pref_version_summary">Version unknown</string>
</resources>