<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.preference.PreferenceCategory
        android:title="@string/pref_category_general">

        <SwitchPreferenceCompat
            android:key="pref_highlight_score_enabled"
            android:title="@string/pref_highlight_score_enabled_title"
            android:summaryOn="@string/pref_highlight_score_enabled_summary_on"
            android:summaryOff="@string/pref_highlight_score_enabled_summary_off"
            android:defaultValue="@bool/pref_highlight_score_enabled_default" />

        <SwitchPreferenceCompat
            android:key="pref_highlight_series_enabled"
            android:title="@string/pref_highlight_series_enabled_title"
            android:summaryOn="@string/pref_highlight_series_enabled_summary_on"
            android:summaryOff="@string/pref_highlight_series_enabled_summary_off"
            android:defaultValue="@bool/pref_highlight_series_enabled_default" />

        <SwitchPreferenceCompat
            android:key="pref_average_as_decimal"
            android:title="@string/pref_average_as_decimal_title"
            android:summaryOn="@string/pref_average_as_decimal_summary_on"
            android:summaryOff="@string/pref_average_as_decimal_summary_off"
            android:defaultValue="@bool/pref_average_as_decimal_default" />

    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory
        android:title="@string/pref_category_scoring">

        <SwitchPreferenceCompat
            android:key="pref_enable_auto_advance"
            android:title="@string/pref_enable_auto_advance_title"
            android:summaryOn="@string/pref_enable_auto_advance_summary_on"
            android:summaryOff="@string/pref_enable_auto_advance_summary_off"
            android:defaultValue="@bool/pref_enable_auto_advance_default" />

        <ListPreference
            android:dependency="pref_enable_auto_advance"
            android:key="pref_auto_advance_time"
            android:title="@string/pref_auto_advance_time_title"
            android:summary="@string/pref_auto_advance_time_summary"
            android:dialogTitle="@string/pref_auto_advance_time_dialog"
            android:entries="@array/pref_auto_advance_times"
            android:entryValues="@array/pref_auto_advance_time_values"
            android:defaultValue="@string/pref_auto_advance_default" />

        <SwitchPreferenceCompat
            android:key="pref_enable_fab"
            android:title="@string/pref_enable_fab_title"
            android:summaryOn="@string/pref_enable_fab_summary_on"
            android:summaryOff="@string/pref_enable_fab_summary_off"
            android:defaultValue="@bool/pref_enable_fab_default" />

        <SwitchPreferenceCompat
            android:key="pref_pins_behind_fab"
            android:title="@string/pref_pins_behind_fab_title"
            android:summaryOn="@string/pref_pins_behind_fab_summary_on"
            android:summaryOff="@string/pref_pins_behind_fab_summary_off"
            android:defaultValue="@bool/pref_pins_behind_fab_default"/>

        <SwitchPreferenceCompat
            android:key="pref_enable_strike_highlights"
            android:title="@string/pref_enable_strike_highlights_title"
            android:summaryOn="@string/pref_enable_strike_highlights_summary_on"
            android:summaryOff="@string/pref_enable_strike_highlights_summary_off"
            android:defaultValue="@bool/pref_enable_strike_highlights_default"/>

        <SwitchPreferenceCompat
            android:key="pref_enable_auto_lock"
            android:title="@string/pref_enable_auto_lock_title"
            android:summaryOn="@string/pref_enable_auto_lock_summary_on"
            android:summaryOff="@string/pref_enable_auto_lock_summary_off"
            android:defaultValue="@bool/pref_enable_auto_lock_default"/>

    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory
        android:title="@string/pref_category_stats">

        <SwitchPreferenceCompat
            android:key="pref_include_events"
            android:title="@string/pref_include_events_title"
            android:summaryOn="@string/pref_include_events_summary_on"
            android:summaryOff="@string/pref_include_events_summary_off"
            android:defaultValue="@bool/pref_include_events_default" />

        <SwitchPreferenceCompat
            android:key="pref_include_open"
            android:title="@string/pref_include_open_title"
            android:summaryOn="@string/pref_include_open_summary_on"
            android:summaryOff="@string/pref_include_open_summary_off"
            android:defaultValue="@bool/pref_include_open_default" />

        <SwitchPreferenceCompat
            android:key="pref_count_h2_as_h"
            android:title="@string/pref_count_h2_as_h_title"
            android:summaryOn="@string/pref_count_h2_as_h_summary_on"
            android:summaryOff="@string/pref_count_h2_as_h_summary_off"
            android:defaultValue="@bool/pref_count_h2_as_h_default" />

        <SwitchPreferenceCompat
            android:key="pref_count_s2_as_s"
            android:title="@string/pref_count_s2_as_s_title"
            android:summaryOn="@string/pref_count_s2_as_s_summary_on"
            android:summaryOff="@string/pref_count_s2_as_s_summary_off"
            android:defaultValue="@bool/pref_count_s2_as_s_default" />

    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory
        android:title="@string/pref_category_match_play">

        <SwitchPreferenceCompat
            android:key="pref_show_match_results"
            android:title="@string/pref_show_match_results_title"
            android:summaryOn="@string/pref_show_match_results_summary_on"
            android:summaryOff="@string/pref_show_match_results_summary_off"
            android:defaultValue="@bool/pref_show_match_results_default" />

        <SwitchPreferenceCompat
            android:key="pref_highlight_match_results"
            android:title="@string/pref_highlight_match_results_title"
            android:summaryOn="@string/pref_highlight_match_results_summary_on"
            android:summaryOff="@string/pref_highlight_match_results_summary_off"
            android:defaultValue="@bool/pref_highlight_match_results_default" />

    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory
        android:title="@string/pref_category_feedback">

        <Preference
            android:key="pref_rate"
            android:title="@string/pref_rate_title"
            android:summary="@string/pref_rate_summary" />

        <Preference
            android:key="pref_report_bug"
            android:title="@string/pref_report_bug_title"
            android:summary="@string/pref_report_bug_summary" />

        <Preference
            android:key="pref_send_feedback"
            android:title="@string/pref_send_feedback_title"
            android:summary="@string/pref_send_feedback_summary" />

    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory
        android:title="@string/pref_category_other">

        <Preference
            android:key="pref_facebook"
            android:title="@string/pref_facebook_title"
            android:summary="@string/pref_facebook_summary" />

        <Preference
            android:key="pref_developer_website"
            android:title="@string/pref_developer_website_title"
            android:summary="@string/pref_developer_website_summary" />

        <Preference
            android:key="pref_view_source"
            android:title="@string/pref_view_source_title"
            android:summary="@string/pref_view_source_summary" />

        <Preference
            android:key="pref_attributions"
            android:title="@string/pref_attributions_title"
            android:summary="@string/pref_attributions_summary" />

        <Preference
            android:key="pref_view_privacy_policy"
            android:title="@string/pref_view_privacy_policy_title"
            android:summary="@string/pref_view_privacy_policy_summary" />

        <Preference
            android:key="pref_version_name"
            android:title="@string/pref_version_title"
            android:summary="@string/pref_version_summary"
            android:enabled="false" />

    </androidx.preference.PreferenceCategory>

</androidx.preference.PreferenceScreen>
