<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sheet_match_play"
    android:layout_width="match_parent"
    android:layout_height="@dimen/bottom_sheet_height"
    android:background="@color/background"
    app:behavior_hideable="true"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    tools:ignore="Overdraw">

    <LinearLayout style="@style/BaseContainer">

        <TextView
            style="@style/HeaderText"
            android:text="@string/match_play_header" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/BodyTextInput"
            android:id="@+id/input_layout_opponent_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/PaddedTextInputEditText"
                android:id="@+id/input_opponent_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords|textPersonName"
                android:imeOptions="flagNoFullscreen|actionNext"
                android:hint="@string/hint_opponent_name"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/BodyTextInput"
            android:id="@+id/input_layout_opponent_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/PaddedTextInputEditText"
                android:id="@+id/input_opponent_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:imeOptions="flagNoFullscreen|actionDone"
                android:hint="@string/hint_opponent_score"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            style="@style/SubHeaderText"
            android:text="@string/match_play_result" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                style="@style/RadioButton"
                android:id="@+id/radio_match_play_none"
                android:text="@string/match_play_none" />

            <RadioButton
                style="@style/RadioButton"
                android:id="@+id/radio_match_play_won"
                android:text="@string/match_play_won" />

            <RadioButton
                style="@style/RadioButton"
                android:id="@+id/radio_match_play_lost"
                android:text="@string/match_play_lost" />

            <RadioButton
                style="@style/RadioButton"
                android:id="@+id/radio_match_play_tied"
                android:text="@string/match_play_tied" />

        </RadioGroup>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>
