<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    style="@style/Dialog"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.appcompat.widget.Toolbar
        style="@style/Toolbar"
        android:id="@+id/toolbar_team" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout style="@style/BaseContainer">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/BodyTextInput"
                android:id="@+id/input_layout_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/PaddedTextInputEditText"
                    android:id="@+id/input_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords|textPersonName"
                    android:imeOptions="flagNoFullscreen|actionDone"
                    android:hint="@string/hint_team_name"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                style="@style/HeaderText"
                android:text="@string/select_team_members" />

            <TextView
                style="@style/BodyText"
                android:id="@+id/tv_error_no_bowlers"
                android:visibility="gone"
                android:text="@string/error_no_bowlers" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/list_bowlers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                style="@style/DeleteButton"
                android:id="@+id/btn_delete"
                android:visibility="gone"
                android:text="@string/delete_team" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>
